# wasm-data-structures

./: .gitignore  Cargo.toml  PROJECT_SUMMARY.md  README.md  TASK_5_COMPLETE.md  TASK_5_SUMMARY.md  test-benchmark-functions.html  test-skip-list-node.js  test-trie.js
blog/: data-structures-showdown.md  open-addressing-deep-dive.md  red-black-tree-deep-dive.md  skip-list-deep-dive.md  trie-deep-dive.md
docs/: BENCHMARK_RESULTS.md
docs/plans/: 2025-11-02-phase-1-hashmap-design.md  2025-11-02-phase-6-open-addressing-implementation.md  2025-11-02-phases-2-5-implementation.md  2025-11-02-phases-6-9-extension-design.md  2025-11-03-phase-7-red-black-tree-design.md  2025-11-03-phase-7-red-black-tree-implementation.md  2025-11-03-phase-8-skip-list-design.md  2025-11-03-phase-8-skip-list-implementation.md  2025-11-05-phase-6-btree-design.md  2025-11-05-phase-6-btree-implementation.md  2025-11-05-phase-7-heap-design.md  2025-11-05-phase-7-heap-implementation.md  2025-11-05-phase-8-unionfind-design.md  2025-11-05-phase-8-unionfind-implementation.md  2025-11-05-phase-9-graph-design.md  (+1 more)
src/: bst.rs  lib.rs  open_addressing.rs  red_black_tree.rs  skip_list.rs  trie.rs.bak  trie.rs.orig  trie.rs.rej
web/: BinarySearchTree.js  HashMap.js  OpenAddressingHashTable.js  RedBlackTree.js  SkipList.js  Trie.js  benchmark-open-addressing.html  benchmark-red-black-tree.html  benchmark-skip-list.html  benchmark-suite.js  benchmark-trie.html  benchmark-wasm.js  benchmark.html  comparison.html  comprehensive-benchmark.html  test-skip-list.html  test-trie.html
