[package]
name = "wasm-data-structures"
version = "0.1.0"
edition = "2021"
authors = ["Claude Code"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "1"

[dev-dependencies]
wasm-bindgen-test = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
